--- a/project3/index.html
+++ b/project3/index.html
@@ -1,10 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="dest/css/styles.css" />
-    <title>(S)CSS Masterclass</title>
-  </head>
-  <body></body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="dist/css/styles.css" />
+        <link rel="stylesheet" href="dist/css/reset.css" />
+        <title>10</title>
+    </head>
+    <body>
+        <main>
+            <span></span>
+            <span></span>
+            <span class="menu">Menu</span>
+
+            <div class="number_row">
+                <div># 10</div>
+                <div># 9</div>
+                <div># 8</div>
+                <div># 7</div>
+                <div># 6</div>
+            </div>
+            <div class="number_row">
+                <div># 5</div>
+                <div># 4</div>
+                <div># 3</div>
+                <div># 2</div>
+                <div># 1</div>
+            </div>
+
+            <div class="center__image">d</div>
+            <span></span>
+            <div class="text">I am super powerful man</div>
+            <span></span>
+        </main>
+    </body>
 </html>
